<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

//empresa
    <TextView
        android:id="@+id/texto001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto001"
        android:paddingTop="16dp"
        android:paddingLeft="18dp"
        android:textColor="@color/textos"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        />
    <EditText
        android:id="@+id/leitorEmpresa"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_toEndOf="@id/texto001"
        android:layout_alignBaseline="@id/texto001"
        android:layout_margin="@dimen/bordaMinima"
        android:textColor="@color/textopreenchido"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/alturaDoTexto2"
        android:textAlignment="gravity"
        android:text="Tracomal"
        android:inputType="text"/>

//data
    <TextView
        android:id="@+id/texto003"
        android:layout_below="@id/texto001"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto003"
        android:paddingTop="18dp"
        android:paddingLeft="18dp"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:textColor="@color/textos"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:id="@+id/leitorData"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"
        android:layout_marginLeft="@dimen/bordaMinima"
        android:layout_marginRight="@dimen/bordaMinima"
        android:layout_toEndOf="@+id/texto003"
        android:layout_alignBaseline="@id/texto003"
        android:layout_alignParentRight="true"
        android:textAllCaps="true"
        android:text="20/12/2015"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="true"
        />

//turno
    <TextView
        android:id="@+id/texto004"
        android:layout_below="@id/texto003"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto004"
        android:paddingTop="18dp"
        android:layout_marginLeft="18dp"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:textColor="@color/textos"/>
    <RadioGroup
        android:id="@+id/grupoTurno"
        android:layout_toEndOf="@id/texto004"
        android:layout_below="@id/texto003"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto040"
            android:id="@+id/radioButton5"
            android:checked="true"
            android:layout_below="@+id/leitorData"
            android:layout_toEndOf="@+id/texto004"
            android:layout_alignBaseline="@id/texto004"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto041"
            android:id="@+id/radioButton6"
            android:checked="false"
            android:layout_toEndOf="@+id/radioButton5"
            android:layout_marginLeft="15dp" />
    </RadioGroup>

//clima
    <TextView
        android:id="@+id/texto005"
        android:layout_below="@id/texto004"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto005"
        android:paddingTop="18dp"
        android:paddingLeft="18dp"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:textColor="@color/textos"/>
    <RadioGroup
        android:id="@+id/grupoClima"
        android:layout_toEndOf="@id/texto004"
        android:layout_below="@id/grupoTurno"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioBom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto037"
            android:checked="true"
            android:layout_toEndOf="@+id/texto005"
            android:layout_alignBaseline="@id/texto005"
            android:layout_marginLeft="5dp"
            android:paddingEnd="10dp"/>
        <RadioButton
            android:id="@+id/radioInstavel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto038"
            android:checked="false"
            android:layout_toEndOf="@+id/radioBom"
            android:layout_alignBaseline="@id/radioBom"
            android:layout_marginLeft="5dp"
            android:paddingEnd="10dp"/>
        <RadioButton
            android:id="@+id/radioChuva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto039"
            android:checked="false"
            android:layout_toEndOf="@+id/radioInstavel"
            android:layout_alignBaseline="@id/radioInstavel"
            android:layout_marginLeft="5dp"
            android:paddingEnd="10dp"/>
    </RadioGroup>

//projeto
    <TextView
        android:id="@+id/texto002"
        android:layout_below="@id/texto005"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto002"
        android:paddingTop="18dp"
        android:paddingLeft="18dp"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:textColor="@color/textos"/>
    <EditText
        android:id="@+id/leitorProjeto"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_toEndOf="@id/texto002"
        android:layout_alignBaseline="@id/texto002"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/alturaDoTexto2a"
        android:textColor="@color/textopreenchido"
        android:layout_margin="4dp"
        android:textAlignment="gravity"
        android:text="1251-R2"
        android:inputType="text"
        android:keepScreenOn="true"/>

//conforme
    <RadioGroup
        android:id="@+id/grupoConforme"
        android:layout_below="@id/texto002"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioConfProj"
            android:layout_below="@id/texto002"
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/alturaDoTextomin"
            android:text="@string/texto050"
            android:checked="true"
            android:paddingTop="15dp"
            android:paddingEnd="2dp"
            />
        <RadioButton
            android:id="@+id/radioConfUpg"
            android:layout_below="@id/texto002"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/alturaDoTextomin"
            android:text="@string/texto051a"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingEnd="2dp"
            />
        <RadioButton
            android:id="@+id/radioConfSemP"
            android:layout_below="@id/texto002"
            android:layout_toEndOf="@+id/radioConfUpg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/alturaDoTextomin"
            android:text="@string/texto052"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingEnd="2dp"/>
    </RadioGroup>

//Observaçoes
    <TextView
        android:id="@+id/texto020b"
        android:layout_below="@id/grupoConforme"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto020b"
        android:paddingTop="20dp"
        android:paddingLeft="18dp"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:textColor="@color/textos"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:id="@+id/leitorObservacoes"
        android:layout_toEndOf="@id/texto020b"
        android:layout_alignBaseline="@id/texto020b"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"
        android:hint="Observações"
        android:textAllCaps="true"
        android:layout_margin="@dimen/bordaMinima"
        android:layout_alignParentRight="true"
        android:text=""
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textAlignment="center"
        android:inputType="text"/>

//Responsavel
    <TextView
        android:id="@+id/texto006"
        android:layout_below="@id/texto020b"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto006"
        android:paddingTop="10dp"
        android:paddingLeft="18dp"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:textColor="@color/textos"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:id="@+id/leitorResponsavel"
        android:layout_toEndOf="@id/texto020b"
        android:layout_alignBaseline="@id/texto006"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"
        android:textAllCaps="true"
        android:layout_margin="@dimen/bordaMinima"
        android:layout_alignParentRight="true"
        android:hint="Raphael"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textAlignment="center"
        android:inputType="text"/>

//analista
    <TextView
        android:id="@+id/texto007"
        android:layout_below="@id/texto006"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto007"
        android:paddingTop="18dp"
        android:paddingLeft="18dp"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/alturaDoTexto1"
        android:textStyle="bold"
        android:textColor="@color/textos"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:id="@+id/leitorAnalista"
        android:layout_toEndOf="@id/texto020b"
        android:layout_alignBaseline="@id/texto007"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"
        android:text="6781370398"
        android:textAllCaps="true"
        android:layout_margin="@dimen/bordaMinima"
        android:layout_marginLeft="250dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textAlignment="gravity"
        android:inputType="text"/>

//botao A
    <Button
        android:id="@+id/botao001"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/texto042"
        style="@style/botao_ccr"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
//botao B
    <Button
        android:id="@+id/botao002"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="15dp"
        android:text="@string/texto043"
        android:elevation="@dimen/alturaDoTexto1"
        style="@style/botao_ccr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
