<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:background="#ffffff"
tools:context="com.msvia.matrix.Activities.porta">

    <ImageView
        android:id="@+id/logoccrporta"
        android:src="@drawable/ccr_logo_msvia"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textoporta"
        android:layout_below="@id/logoccrporta"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/porta"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto3"
        />
    <TextView
        android:id="@+id/textoporta2"
        android:layout_below="@id/textoporta"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/porta2"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"
        />
    <TextView
        android:id="@+id/produzido"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/alturaDoTexto3"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/produzido"
        android:textColor="@color/textopreenchido"
        android:textSize="10dp"
        />
</RelativeLayout>

