<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="@dimen/activity_horizontal_margin">
        //data
        <TextView
            android:id="@+id/retempresai"
            android:layout_alignParentLeft="true"
            android:layout_marginEnd="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vazio"
            android:textColor="@color/textos"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/alturaDoTexto1"
            />
        <TextView
            android:id="@+id/retdatai"
            android:layout_alignParentRight="true"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBaseline="@id/retempresai"
            android:text="__/__/____"
            android:textColor="@color/textopreenchido"
            android:textSize="@dimen/alturaDoTexto2"
            />
        //empresa
    //KMS
    <TextView
        android:id="@+id/texto020i"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto020"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"
        />
    <TextView
        android:id="@+id/retkmii"
        android:layout_toEndOf="@id/texto020i"
        android:layout_alignBaseline="@id/texto020i"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_marginLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vazio"
        android:textColor="@color/textos"
        android:textStyle="bold"
        android:textSize="@dimen/alturaDoTexto1"
        />
    <TextView
        android:id="@+id/mais1i"
        android:layout_toEndOf="@id/retkmii"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_marginLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="+"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"/>
    <TextView
        android:id="@+id/retesii"
        android:layout_toEndOf="@id/mais1i"
        android:layout_alignBaseline="@id/mais1i"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_marginLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vazio"
        android:textColor="@color/textos"
        android:textStyle="bold"
        android:textSize="@dimen/alturaDoTexto1"
        />
    //KMFS
    <TextView
        android:id="@+id/retesfi"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:layout_alignBaseline="@id/texto020i"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vazio"
        android:textColor="@color/textos"
        android:textStyle="bold"
        android:textSize="@dimen/alturaDoTexto1"
        />
    <TextView
        android:id="@+id/mais2i"
        android:layout_toLeftOf="@id/retesfi"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_marginRight="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="+"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"/>
    <TextView
        android:id="@+id/retkmfi"
        android:layout_toLeftOf="@id/mais2i"
        android:layout_alignBaseline="@id/retesii"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vazio"
        android:textColor="@color/textos"
        android:textStyle="bold"
        android:textSize="@dimen/alturaDoTexto1"/>
    <TextView
        android:id="@+id/texto021i"
        android:layout_toLeftOf="@id/retkmfi"
        android:layout_below="@id/retdatai"
        android:layout_marginTop="@dimen/espacoEntreLinhas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto021"
        android:textColor="@color/textopreenchido"
        android:textSize="@dimen/alturaDoTexto2"
        />
</RelativeLayout>